package com.keinen.ddd.domain;

import javax.persistence.DiscriminatorValue;
import javax.persistence.Embeddable;

@Embeddable
@DiscriminatorValue("II")
public class Address {
    private String address1;
    private String address2;
    private String zipCode;

    public Address(String address1, String address2, String zipCode) {
        this.address1 = address1;
        this.address2 = address2;
        this.zipCode = zipCode;
    }

    public String getAddress1() {
        return address1;
    }

    public String getAddress2() {
        return address2;
    }

    public String getZipcode() {
        return zipCode;
    }
}
