@startuml
' class

class Order <<ROOT>>{
    - no : orderNumber
    - orderer : Orderer
    - totalAmounts : Money
    - orderLines : List<OrderLine>
    - shippingInfo : ShippingInfo
    - state : OrderState
    + changeShippingInfo(newshippingInfo:ShippingInfo)
    + changeShipped()
    + cancel()
    + completePayment()
}

class OrderLine {
    - product : Product
    - price : Money
    - quantity : int
    - amounts Money
}

class ShippingInfo {
    - shippingAddress : Address
    - receiver : Receiver
}

class Address {
    - zipCode : String
    - address1 : String
    - address2 : String
}

class Receiver {
    - name : String
    - mobile : String
    - email : String
}

enum OrderState <<ENUMERATION>> {
    PAYMENT_WAITING
    PREPARING
    SHIPPED
    DELIVERING
    DELIVERY_COMPLETED
    CANCELED
}

' class relation
Order *- OrderLine
Order --> OrderState
Order --> ShippingInfo
ShippingInfo --> Address
ShippingInfo --> Receiver
@enduml